# homelab-infra

./: .env.example  .gitignore  .gitmodules  Pulumi.prod.yaml  README.md  __main__.py  dns.py  docker-compose.yml  proxmox  pyproject.toml  secrets.py
homelab/: .env.example  .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
homelab/apps/: __init__.py  volumes.py
homelab/apps/syncthing/: __init__.py  syncthing.py
homelab/apps/tailscale/: __init__.py
homelab/config/: __init__.py  nodes.py  settings.py
homelab/infrastructure/: __init__.py  iso.py  provider.py  vms.py
homelab/talos/: __init__.py  bootstrap.py  config.py  secrets.py
rackspace/: .env.example  Pulumi.prod.yaml  __main__.py  pyproject.toml  secrets.py
rackspace/apps/: __init__.py  dns.py  volumes.py
rackspace/apps/argocd/: argo-tylermarques-com-cert.yaml  ingress.yaml  kube-flannel.yml
rackspace/apps/authelia/: __init__.py  authelia.py
rackspace/apps/cert_manager/: staging-tylermarques-com-cert.yaml
rackspace/apps/cloudnative_pg/: __init__.py  cloudnative_pg.py
rackspace/apps/gitlab/: ingress.yaml
rackspace/apps/marquescg_com/: argoApp.yaml  kustomization.yaml
rackspace/apps/mealie/: __init__.py  mealie.py
rackspace/apps/media/: __init__.py  jackett.py  jellyseerr.py  lidarr.py  prowlarr.py  radarr.py  sabnzbd.py  sonarr.py  utils.py
rackspace/apps/monitoring/: __init__.py  grafana.py  loki.py  namespace.py
rackspace/apps/nfs/: __init__.py  csitestpod.py  nfs-PVC.yaml  nfs-client-provisioner.yml  speedtest.py
rackspace/apps/nfs_csi_driver/: __init__.py
(+197 files in other folders)
