[project]
name = "homelab-talos-cluster"
version = "0.0.1"
requires-python = ">=3.11,<4"
dependencies = [
  "pulumi>=3.0.0,<4.0.0",
  "pulumi-proxmoxve>=7.0.0,<8.0.0",
  "pulumiverse-talos>=0.6.0,<1.0.0",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.9.0,<3",
  "python-dotenv>=1.0.0,<2",
]

[tool.ruff]
line-length = 200

[tool.pyright]
line-length = 150
