[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-kubernetes = ">=4.0.0,<5.0.0"
python = "^3.9"
pulumi-cloudflare = "^5.49.1"
dotenv = "^0.9.9"
pulumi-kubernetes-cert-manager = "^0.2.0"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.3"

[tool.ruff]
line-length = 200
[tool.pyright]
line-length = 150
