[project]
name = "tylers-homelab-infra"
version = "0.0.0"
requires-python = ">=3.11,<4"
dependencies = [
  "pulumi>=3.0.0,<4.0.0",
  "pulumi-kubernetes>=4.0.0,<5.0.0",
  "pulumi-cloudflare>=5.49.1,<6",
  "dotenv>=0.9.9,<0.10",
  "pulumi-kubernetes-cert-manager>=0.2.0,<0.3",
  "pydantic-settings>=2.9.1,<3",
  "pydantic>=2.11.3,<3",
  "poetry>=2.2.1",
]

[tool.ruff]
line-length = 200

[tool.pyright]
line-length = 150
